@@ -3,26 +3,24 @@ package org.httpserver.handler;
 import org.httpserver.request.Request;
 import org.httpserver.response.Response;
 import org.httpserver.response.ResponseBuilder;
-import org.httpserver.response.ResponseHeader;
-import org.httpserver.response.StatusCode;
 import org.httpserver.server.HttpMethod;
 
-import java.util.Arrays;
 import java.util.List;
 
+import static org.httpserver.response.ResponseHeaderName.ALLOW;
+import static org.httpserver.response.StatusCode.OK;
 import static org.httpserver.server.HttpMethod.*;
 
 public class OptionsHandler implements Handler {
-    @Override
     public List<HttpMethod> allowedHttpMethods() {
-        return Arrays.asList(GET, HEAD, OPTIONS);
+        return List.of(GET, HEAD, OPTIONS);
     }
 
     @Override
     public Response handleResponse(Request request) {
         return new ResponseBuilder()
-                .withStatusCode(StatusCode.OK)
-                .withHeaderName(ResponseHeader.ALLOW_HEADER.getResponseHeader())
+                .withStatusCode(OK)
+                .withHeaderName(ALLOW)
                 .withHeaderValue(String.format("%s, %s, %s", GET, HEAD, OPTIONS))
                 .build();
     }
